--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "scripts": {
         "frontend": "cd packages/physio_ai && npm run dev",
+        "frontend_prod  ": "cd packages/physio_ai && npm run build && npm run start",
         "backend": "cd packages/backend && uvicorn app.main:app --reload --port 8000",
         "dev": "concurrently \"npm run frontend\" \"npm run backend\""
     },
