--- a/packages/backend/requirements.txt
+++ b/packages/backend/requirements.txt
@@ -1,17 +1,24 @@
-annotated-types==0.7.0
-anyio==4.6.2.post1
-click==8.1.7
-dnspython==2.7.0
-exceptiongroup==1.2.2
+# Core dependencies
 fastapi==0.115.4
-h11==0.14.0
-idna==3.10
+uvicorn==0.32.0
 motor==3.6.0
 pydantic==2.9.2
-pydantic_core==2.23.4
-pymongo==4.9.2
+pydantic-settings==2.2.1
 python-dotenv==1.0.1
-sniffio==1.3.1
-starlette==0.41.2
-typing_extensions==4.12.2
-uvicorn==0.32.0
+websockets==12.0
+
+# AWS Integration
+boto3==1.34.69
+langchain==0.1.12
+anthropic==0.18.1
+
+# Computer Vision & ML
+numpy==1.26.4
+opencv-python==4.9.0.80
+mediapipe==0.10.11
+scipy==1.12.0
+
+# Monitoring & Performance
+prometheus-client==0.20.0
+python-jose==3.3.0
+passlib==1.7.4
